[package]
name = "yates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.18" }
wasm-bindgen = "0.2.78"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
web-sys = { version = "0.3", features = ["SvgGraphicsElement", "SvgMatrix"] }
